--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,7 +9,7 @@ $transition: all 0.15s ease-out;
   flex: 1 1 auto;
   /* autoprefixer: ignore next */
   grid-template-areas: 'article sidebar';
-  grid-template-columns: 100vw var(--mm-layout-sidebar-width);
+  grid-template-columns: 360px var(--mm-layout-sidebar-width);
   grid-template-rows: 100%;
   transition: $transition;
 }
@@ -33,7 +33,18 @@ $transition: all 0.15s ease-out;
 }
 
 .sidebar--hidden [class*='Sidebar-module--sidebar--'] {
-  transform: translate3d(100vw, 0, 0);
+  transform: translate3d(360px, 0, 0);
+}
+
+@include variables.breakpoint('xs') {
+  .main {
+    grid-template-columns: 100vw var(--mm-layout-sidebar-width);
+    grid-template-rows: 100%;
+  }
+
+  .sidebar--hidden [class*='Sidebar-module--sidebar--'] {
+    transform: translate3d(100vw, 0, 0);
+  }
 }
 
 @include variables.breakpoint('lg') {
